fix show visible projects

--- a/style.css
+++ b/style.css
@@ -52,7 +52,8 @@ body {
 /* Show with animation */
 .visible {
     opacity: 1;
-    transform: translateY(0); /* Return to original position */
+    transform: translateY(20px); /* Return to original position */
+    transition: opacity 0.6s ease-in, transform 0.6s ease-in; /* Smooth transition */
 }
 
 /* Name and Title */
